Fixed: Autofill bug (white text on white background) Added main content jump mark to front page

--- a/web/themes/custom/ddbp/src/scss/elements/_form.scss
+++ b/web/themes/custom/ddbp/src/scss/elements/_form.scss
@@ -85,7 +85,7 @@ textarea {
 }
 
 // remove autofill styling
-@include autofill($color-white);
+@include autofill($color-bg, $color-grey, $color-darken);
 
 // placeholder
 @include placeholder {
